[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
argon2 = "0.5"
rand = "0.8"
rust_decimal = { version = "1.30", features = ["serde"] }
flexi_logger = "0.26"
log = "0.4"
once_cell = "1.20"
hex = "0.4"
serde_json = "1.0"
dotenvy = "0.15"
futures-util = "0.3"